tests/ui/pin_mut_alias.stderr
error[E0277]: mutable reference to C++ type requires a pin -- use Pin<&mut Arg>
  --> tests/ui/pin_mut_alias.rs:16:23
   |
16 |             fn f(arg: &mut Arg);
   |                       ^^^^^^^^ use `Pin<&mut Arg>`
   |
   = help: the trait `arg::ffi::_::ReferenceToUnpin` is not implemented for `&mut arg::Arg`

error[E0277]: mutable reference to C++ type requires a pin -- use Pin<&mut Receiver>
  --> tests/ui/pin_mut_alias.rs:36:18
   |
36 |             fn g(&mut self);
   |                  ^^^^^^^^^ use `self: Pin<&mut Receiver>`
   |
   = help: the trait `receiver::ffi::_::ReferenceToUnpin` is not implemented for `&mut receiver::Receiver`

error[E0277]: mutable reference to C++ type requires a pin -- use Pin<&mut Receiver2>
  --> tests/ui/pin_mut_alias.rs:56:24
   |
56 |             fn h(self: &mut Receiver2);
   |                        ^^^^^^^^^^^^^^ use `Pin<&mut Receiver2>`
   |
   = help: the trait `receiver2::ffi::_::ReferenceToUnpin` is not implemented for `&mut receiver2::Receiver2`
